--- a/src/components/MenuTabs/TabsContent/BoloCha/BoloCha.css
+++ b/src/components/MenuTabs/TabsContent/BoloCha/BoloCha.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 320px;
+  max-width: 320px;
 }
 
 .bolo-cha-content picture {
