--- a/src/components/MenuTabs/TabsContent/Doces/Doces.css
+++ b/src/components/MenuTabs/TabsContent/Doces/Doces.css
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 320px;
+  max-width: 320px;
 }
 
 .doces-content picture {
   margin-bottom: 1.5rem;
+  
 }
 
 @media only screen and (min-width: 1024px) {
