--- a/src/components/MenuTabs/TabsContent/MiniLanches/MiniLanches.css
+++ b/src/components/MenuTabs/TabsContent/MiniLanches/MiniLanches.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  width: 320px;
+  max-width: 320px;
 }
 
 .mini-lanches-content > * {
